force-app/main/default/objects/Candidate__c.object
<CustomObject>
    <description>Object to gather Candidates applying to Positions offered.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Administrative_Situation__c</fullName>
        <label>Administrative Situation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Able to Work</fullName>
                    <default>true</default>
                    <label>Able to Work</label>
                </value>
                <value>
                    <fullName>Under APS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>This field contains the alternate phone number of the candidate</description>
        <inlineHelpText>This field contains the alternate phone number of the candidate</inlineHelpText>
        <label>Alternate Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Reminder_Date__c</fullName>
        <label>Availability Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <description>The current city of the candidate</description>
        <label>Current City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Company__c</fullName>
        <description>Details about the current company of the candidate</description>
        <label>Current Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Compensation__c</fullName>
        <description>Current compensation (Fixed+Var) of the candidate</description>
        <label>Current Compensation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Designation__c</fullName>
        <description>Current designation of the candidate in the current company</description>
        <label>Current Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Education level of the Candidate.</description>
        <label>Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <description>Expected CTC of the candidate</description>
        <label>Expected CTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPRConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Candidate gave his consent to keep his data.</description>
        <label>GDPR Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDPRNotificationDate__c</fullName>
        <description>Date on which we have informed the candidate of the fact that we are storing his personal data.</description>
        <label>GDPR Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Details about the candidate&apos;s gender</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobApplicationRecordType__c</fullName>
        <label>Job Application Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobApplicationStatus__c</fullName>
        <label>Job Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <description>Notice period of the candidate in the current company</description>
        <label>Notice Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Professional Experience (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_to_relocate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the candidate is ready to relocate to the job position</description>
        <label>Ready to relocate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Request</label>
        <referenceTo>ReferralRequest__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchoolUniversity__c</fullName>
        <description>Educational Background of the Candidate.</description>
        <label>School/University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Availability_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Availability Reminder</label>
        <type>Checkbox</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Education__c</columns>
        <columns>Profession__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Nationality__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Availability_Date_Must_Be_Populated</fullName>
        <active>true</active>
        <description>The User must select a reminder date if &apos;Send Availability Reminder&apos; is selected</description>
        <errorConditionFormula>AND(
Send_Availability_Reminder__c =TRUE ,
 ISBLANK( Availability_Reminder_Date__c ) 
)</errorConditionFormula>
        <errorDisplayField>Availability_Reminder_Date__c</errorDisplayField>
        <errorMessage>The Reminder Date must be populated</errorMessage>
    </validationRules>
</CustomObject>